index.html: comment out react-render-tracker bacause cypress broken

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Create React App TypeScript Todo Example 2021</title>
     <link rel="manifest" href="/manifest.json" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <script src="https://unpkg.com/react-render-tracker"></script>
+<!--    <script src="https://unpkg.com/react-render-tracker"></script>-->
   </head>
 
   <body>
