add vite dependencies

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>React App TypeScript Todo Example 2022</title>
     <link rel="manifest" href="/manifest.json" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-<!--    <script src="https://unpkg.com/react-render-tracker"></script>-->
   </head>
 
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
